src/objects/Clinic_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Date__c</fullName>
        <label>Budget Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinic_Invoice_Forecast__c</fullName>
        <formula>IF(YEAR( Budget_Date__c ) &lt; YEAR(TODAY()) ||
(YEAR(Budget_Date__c) = YEAR(TODAY()) &amp;&amp; MONTH(Budget_Date__c) &lt; (MONTH(TODAY()))-1),
 Invoice_Amount__c ,
 Won_Scheduled_Revenue__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinic Invoice/Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clinic_Month_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Clinic Month Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Clinic_Name__c</fullName>
        <formula>TEXT(Clinic__r.Clinic__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <referenceTo>Clinic__c</referenceTo>
        <relationshipLabel>Clinic Budgets</relationshipLabel>
        <relationshipName>Clinic_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Forecast_vs_Goal__c</fullName>
        <formula>Clinic_Invoice_Forecast__c -  Clinic_Month_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice/Forecast vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Variance_vs_Goal__c</fullName>
        <formula>Invoice_Amount__c  -  Clinic_Month_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Variance vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline_Scheduled_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of related Revenue Schedules where the Opportunity is Open.</inlineHelpText>
        <label>Pipeline Scheduled Revenue</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sch_Revenue_vs_Goal__c</fullName>
        <formula>Won_Scheduled_Revenue__c  -  Clinic_Month_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sch. Revenue vs Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Won_Scheduled_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Won Scheduled Revenue</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Clinic Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Budget_Date__c</columns>
        <columns>Clinic__c</columns>
        <columns>Clinic_Name__c</columns>
        <columns>Won_Scheduled_Revenue__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Pipeline_Scheduled_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Clinic_Budgets_This_Year</fullName>
        <columns>Clinic__c</columns>
        <columns>NAME</columns>
        <columns>Budget_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Won_Scheduled_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Budget_Date__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Clinic Budgets This Year</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Clinic Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinic Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>